--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-spring.data.mongodb.uri=mongodb://localhost:27017/demo
+spring.data.mongodb.uri=mongodb+srv://marlond25:12345@cluster0.awk1e.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+
