--- a/web/package.json
+++ b/web/package.json
@@ -12,7 +12,7 @@
         "react-hook-form": "^7.6.4",
         "react-redux": "7.2.0",
         "react-router-dom": "5.1.2",
-        "react-scripts": "3.0.1",
+        "react-scripts": "^5.0.0",
         "redux": "4.0.5",
         "redux-devtools-extension": "2.13.8",
         "redux-thunk": "2.3.0"
